--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,7 @@ test:
 #
 production:
   <<: *default
+  secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
   database: freemarket_sample_56c_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
